@@ -1,5 +1,7 @@
 2010-03-15  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/MLPSolver.hpp: Producing call graph.
+
 	* testsuite/TestHexParserModule.cpp: Completing the test cases with throw requirement.
 	* testsuite/TestMLPSolver.cpp: Likewise.
 
